--- a/2. Words as Features.ipynb
+++ b/2. Words as Features.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7fa0c62b",
+   "id": "2fdba2e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,59 +17,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7132e591",
+   "execution_count": 38,
+   "id": "66bbde11",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The size of the vocabulary is :30449\n"
+      "The size of the vocabulary is 30449\n"
      ]
     }
    ],
    "source": [
-    "dataset = pd.read_json(\"goemotions.json\") \n",
-    "\n",
-    "dataset.columns = ['posts','emotion','sentiment'] \n",
-    "emotion = dataset['emotion']\n",
-    "sentiment = dataset['sentiment']\n",
-    "posts = dataset['posts']\n",
-    "size = dataset.shape[0]\n",
-    "\n",
     "#2.1 Processing the dataset;Displayed the number of tokens in the dataset\n",
-    "count = CountVectorizer()\n",
-    "X = count.fit_transform(posts)\n",
-    "size_of_vocab = count.get_feature_names_out().shape[0]\n",
+    "with open(\"goemotions.json\", \"r\") as data:\n",
+    "    file = pd.read_json(data)\n",
+    "    \n",
+    "emotion = file[1].value_counts().to_dict()\n",
+    "sentiment = file[2].value_counts().to_dict()\n",
     "\n",
-    "print(f'The size of the vocabulary is :{size_of_vocab}')"
+    "posts = file[0].tolist()\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(posts)\n",
+    "\n",
+    "print(f\"The size of the vocabulary is {len(X.toarray()[0])}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e2bfdd4f",
+   "execution_count": 37,
+   "id": "bd8b42d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#2.2 Split the dataset\n",
-    "\n",
-    "\n",
     "#get the location\n",
     "emo = preprocessing.LabelEncoder()\n",
     "senti = preprocessing.LabelEncoder()\n",
     "\n",
-    "#now need to be split ????\n"
+    "#vectorizing emotions\n",
+    "file[1] = emo.fit_transform(file[1]) \n",
+    "#vectorizing sentiments\n",
+    "file[2] = senti.fit_transform(file[2]) \n",
+    "\n",
+    "#now splitting the data \n",
+    "X_train,X_test,Yemo_train, Yemo_test,Ysenti_train, Ysenti_test = train_test_split(X,file[1],file[2], test_size = 0.2, train_size=0.8)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3fa80e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
