--- a/mp1.ipynb
+++ b/mp1.ipynb
@@ -946,9 +946,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d99e824b",
+   "metadata": {},
+   "source": [
+    "## 3.3 Embedding of reddit posts\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7898e7d6",
+   "id": "7bba1942",
    "metadata": {},
    "outputs": [],
    "source": []
